--- a/README
+++ b/README
@@ -17,4 +17,5 @@ STARTING THE WORKFLOW ENGINE:
 #############################
 1. Download the latest version of postgres and setup a database with a password.
 2. Configure config/database.yml 'production' attributes to use the database attributes setup in 1
-3. From the script directory run: >rails server webrick -b 127.0.0.1 -p <port> -e production
+3. Run 'bundle install' to get all the dependencies
+4. From the script directory run: >rails server webrick -b 127.0.0.1 -p <port> -e production
